--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
 </head>
 <body>
+<h1>Voici vos 3 illustrations, racontez une histoire en vous basant sur ces 3 images.</h1>
     <div class="image-container">
         <img id="img1" src="" alt="Image 1">
         <img id="img2" src="" alt="Image 2">
